# upwork-profile-and-work-scanner-api

./: .credentials-sample.json  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
models/: profile.py  work.py
scraper/: driver.py  navigation.py  scraping.py
