[tool.poetry]
name = "upwork-scanner"
version = "0.1.0"
description = "Argyle code challenge Upwork scanner"
authors = ["markneilpascual <https://markpascual.tech/>"]

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^3.6.1"
async_generator = "^1.10"
attrs = "^22.1.0"
beautifulsoup4 = "^4.11.1"
certifi = "^2022.6.15"
cffi = "^1.15.1"
click = "^8.1.3"
colorama = "^0.4.5"
cryptography = "^37.0.4"
fastapi = "^0.79.0"
h11 = "^0.13.0"
idna = "^3.3"
lxml = "^4.9.1"
outcome = "^1.2.0"
pycparser = "^2.21"
pydantic = "^1.9.1"
pyOpenSSL = "^22.0.0"
pyotp = "^2.6.0"
PySocks = "^1.7.1"
random-user-agent = "^1.0.1"
selenium = "^4.3.0"
sniffio = "^1.2.0"
sortedcontainers = "^2.4.0"
soupsieve = "^2.3.2"
trio = "0.21.0"
starlette = "0.19.1"
trio-websocket = "0.9.2"
typing-extensions = "^4.3.0"
urllib3 = "1.26.11"
uvicorn = "0.18.2"
wsproto = "1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
